--- a/documentation/interfaces/Attack.html
+++ b/documentation/interfaces/Attack.html
@@ -79,192 +79,193 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content component">
+               <div class="content interface">
                    <div class="content-data">
 
 
 
 
+
+
+
+
+
+
+
+
+
 <ol class="breadcrumb">
-  <li class="breadcrumb-item">Components</li>
+  <li class="breadcrumb-item">Interfaces</li>
   <li class="breadcrumb-item"
   >
-  HeroComponent</li>
+  Attack</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-            <a href="#info" class="nav-link active"
+            <a href="#info" 
+                class="nav-link"
+                class="nav-link active"
                 role="tab" id="info-tab" data-bs-toggle="tab" data-link="info">Info</a>
         </li>
         <li class="nav-item">
-            <a href="#source" class="nav-link"
+            <a href="#source" 
+                class="nav-link"
+                
                 role="tab" id="source-tab" data-bs-toggle="tab" data-link="source">Source</a>
-        </li>
-        <li class="nav-item">
-            <a href="#templateData" class="nav-link"
-                role="tab" id="templateData-tab" data-bs-toggle="tab" data-link="template">Template</a>
-        </li>
-        <li class="nav-item">
-            <a href="#tree" class="nav-link"
-                role="tab" id="tree-tab" data-bs-toggle="tab" data-link="dom-tree">DOM Tree</a>
         </li>
 </ul>
 
 <div class="tab-content">
-    <div class="tab-pane fade active in" id="info"><p class="comment">
-    <h3>File</h3>
-</p>
-<p class="comment">
-    <code>src/app/components/hero/hero.component.ts</code>
-</p>
+    <div class="tab-pane fade active in" id="info">
+        <p class="comment">
+            <h3>File</h3>
+        </p>
+        <p class="comment">
+            <code>src/app/interfaces/weapon.model.ts</code>
+        </p>
 
 
 
 
-
-
-<section data-compodoc="block-metadata">
-    <h3>Metadata</h3>
-    <table class="table table-sm table-hover metadata">
-        <tbody>
-
-
-
-
-
-
-
-
-
-
-
-
-            <tr>
-                <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-hero</code></td>
-            </tr>
-
-            <tr>
-                <td class="col-md-3">standalone</td>
-                <td class="col-md-9"><code>true</code></td>
-            </tr>
-
-
-
-
-
-            <tr>
-                <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./hero.component.html</code></td>
-            </tr>
+        <section data-compodoc="block-index">
+            <h3 id="index">Index</h3>
+            <table class="table table-sm table-bordered index-table">
+                <tbody>
+                    <tr>
+                        <td class="col-md-4">
+                            <h6><b>Properties</b></h6>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <ul class="index-list">
+                                <li>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#display" 
+>
+                                            display
+                                        </a>
+                                </li>
+                                <li>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#raw" 
+>
+                                            raw
+                                        </a>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
 
 
-            <tr>
-                <td class="col-md-3">styleUrl</td>
-                <td class="col-md-9"><code>./hero.component.css</code></td>
-            </tr>
+            <section data-compodoc="block-properties">
+                <h3 id="inputs">Properties</h3>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="display"></a>
+                                        <span class="name "><b>display</b>
+                                            <a href="#display">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>display:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
 
 
 
 
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="raw"></a>
+                                        <span class="name "><b>raw</b>
+                                            <a href="#raw">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>raw:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+</code>
+                                    </td>
+                                </tr>
 
-        </tbody>
-    </table>
-</section>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
 
 
 
 
-
-
-
-
-
-</div>
+                        </tbody>
+                    </table>
+            </section>
+    </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface Attack {
+  display?: number; 
+  raw?: number;   
+}
 
-@Component({
-  selector: &#x27;app-hero&#x27;,
-  standalone: true,
-  imports: [],
-  templateUrl: &#x27;./hero.component.html&#x27;,
-  styleUrl: &#x27;./hero.component.css&#x27;
-})
-export class HeroComponent {
-
+export interface Weapon {
+  id: number;
+  name: string;
+  type: string; 
+  rarity: number; 
+  attack: Attack; 
+  elements?: string[];
+  crafting?: {
+    materials: string[];
+  };
+ 
 }
 </code></pre>
     </div>
-
-    <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;hero-content&quot;&gt;
-  &lt;div class&#x3D;&quot;container my-5&quot;&gt;
-    &lt;div class&#x3D;&quot;row pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg&quot;&gt;
-      &lt;!-- Texto --&gt;
-      &lt;div class&#x3D;&quot;col-12 col-lg-7 p-3 p-lg-5 pt-lg-3&quot;&gt;
-        &lt;h1 class&#x3D;&quot;display-4 fw-bold lh-1 text-body-emphasis&quot;&gt;Equipate para ser capaz de todo&lt;/h1&gt;
-        &lt;p class&#x3D;&quot;lead&quot;&gt;Busca cualquier arma o armadura que necesites, esto te ayudará a ir bien preparado a cualquier misión del juego. Vence hasta al peor de los dragones gracias a nuestra página, donde podrás acceder rápido a toda la información que necesites para equiparte.&lt;/p&gt;
-        &lt;div class&#x3D;&quot;d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3&quot;&gt;
-          &lt;!-- Botones --&gt;
-          &lt;a href&#x3D;&quot;/equipment&quot; class&#x3D;&quot;btn btn-primary btn-lg&quot;&gt;Equipo&lt;/a&gt;
-        &lt;/div&gt;
-      &lt;/div&gt;
-
-      &lt;!-- Imagen --&gt;
-      &lt;div class&#x3D;&quot;col-12 col-lg-5 p-0 overflow-hidden shadow-lg&quot; style&#x3D;&quot;max-height: 500px;&quot;&gt;
-        &lt;img class&#x3D;&quot;rounded-lg-3 w-100 h-100&quot; src&#x3D;&quot;Images/Hunter.svg&quot; alt&#x3D;&quot;Hunter&quot; style&#x3D;&quot;max-height: 500px; object-fit: cover; object-position: top;&quot;&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;/div&gt;</code></pre>
-    </div>
-
-
-    <div class="tab-pane fade " id="tree">
-        <div id="tree-container"></div>
-        <div class="tree-legend">
-            <div class="title">
-                <b>Legend</b>
-            </div>
-            <div>
-                <div class="color htmlelement"></div><span>Html element</span>
-            </div>
-            <div>
-                <div class="color component"></div><span>Component</span>
-            </div>
-            <div>
-                <div class="color directive"></div><span>Html element with directive</span>
-            </div>
-        </div>
-    </div>
-
-    
 </div>
-
-<script src="../js/libs/vis.min.js"></script>
-<script src="../js/libs/htmlparser.js"></script>
-<script src="../js/libs/deep-iterator.js"></script>
-<script>
-        var COMPONENT_TEMPLATE = '<div><div class="hero-content">  <div class="container my-5">    <div class="row pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">      <!-- Texto -->      <div class="col-12 col-lg-7 p-3 p-lg-5 pt-lg-3">        <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Equipate para ser capaz de todo</h1>        <p class="lead">Busca cualquier arma o armadura que necesites, esto te ayudará a ir bien preparado a cualquier misión del juego. Vence hasta al peor de los dragones gracias a nuestra página, donde podrás acceder rápido a toda la información que necesites para equiparte.</p>        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">          <!-- Botones -->          <a href="/equipment" class="btn btn-primary btn-lg">Equipo</a>        </div>      </div>      <!-- Imagen -->      <div class="col-12 col-lg-5 p-0 overflow-hidden shadow-lg" style="max-height: 500px;">        <img class="rounded-lg-3 w-100 h-100" src="Images/Hunter.svg" alt="Hunter" style="max-height: 500px; object-fit: cover; object-position: top;">      </div>    </div>  </div></div></div>'
-    var COMPONENTS = [{'name': 'Album2Component', 'selector': 'app-album2'},{'name': 'Album3Component', 'selector': 'app-album3'},{'name': 'AlbumComponent', 'selector': 'app-album'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarouselComponent', 'selector': 'app-carousel'},{'name': 'CreateAccountComponent', 'selector': 'app-create-account'},{'name': 'EquipmentComponent', 'selector': 'app-equipment'},{'name': 'EventsComponent', 'selector': 'app-events'},{'name': 'FilmComponent', 'selector': 'app-film'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'FormComponent', 'selector': 'app-form'},{'name': 'HeaderComponent', 'selector': 'app-header'},{'name': 'HeroComponent', 'selector': 'app-hero'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'JumbotronComponent', 'selector': 'app-jumbotron'},{'name': 'MonstersComponent', 'selector': 'app-monsters'}];
-    var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'HeroComponent'};
-</script>
-<script src="../js/tree.js"></script>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -298,8 +299,8 @@ export class HeroComponent {
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'HeroComponent.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
+            var COMPODOC_CURRENT_PAGE_URL = 'Attack.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
